# UTF-unknown

./: .editorconfig  .gitignore  Makefile.am  README.md  SECURITY.md  UTF-unknown.sln  UTF-unknown.sln.DotSettings  Ude.sln  Ude.sln.DotSettings  Ude.userprefs  aclocal.m4  appveyor.yml
src/: CharsetDetector.cs  CompatibilitySuppressions.xml  DetectionConfidence.cs  DetectionDetail.cs  DetectionResult.cs  DetectionSummary.cs  Makefile.am  UTF-unknown.csproj  UtfUnknown.snk  public.pk  ude.pc.in
src/Core/: ArabicModel.cs  BIG5DistributionAnalyser.cs  BIG5SMModel.cs  Big5Prober.cs  BitPackage.cs  BulgarianModel.cs  CharDistributionAnalyser.cs  Charset.cs  CharsetProber.cs  CodepageName.cs  CodingStateMachine.cs  CroatianModel.cs  CyrillicModel.cs  CzechModel.cs  DanishModel.cs  EUCJPContextAnalyser.cs  EUCJPDistributionAnalyser.cs  EUCJPProber.cs  EUCJPSMModel.cs  EUCKRDistributionAnalyser.cs  EUCKRProber.cs  EUCKRSMModel.cs  EUCTWDistributionAnalyser.cs  EUCTWProber.cs  EUCTWSMModel.cs  EscCharsetProber.cs  EsperantoModel.cs  EstonianModel.cs  FinnishModel.cs  FrenchModel.cs  GB18030DistributionAnalyser.cs  GB18030Prober.cs  GB18030SMModel.cs  GB18030_SMModel.cs  GermanModel.cs  GreekModel.cs  HZSMModel.cs  HZ_GB_2312_SMModel.cs  HebrewModel.cs  HebrewProber.cs  (+209 more)
src/Core/Analyzers/: CharDistributionAnalyser.cs
src/Core/Analyzers/MultiByte/Chinese/: BIG5DistributionAnalyser.cs  EUCTWDistributionAnalyser.cs  GB18030DistributionAnalyser.cs
src/Core/Analyzers/MultiByte/Japanese/: EUCJPContextAnalyser.cs  EUCJPDistributionAnalyser.cs  JapaneseContextAnalyser.cs  SJISContextAnalyser.cs  SJISDistributionAnalyser.cs
src/Core/Analyzers/MultiByte/Korean/: EUCKRDistributionAnalyser.cs
src/Core/Models/: SequenceModel.cs  StateMachineModel.cs
src/Core/Models/MultiByte/: UCS2BE_SMModel.cs  UCS2LE_SMModel.cs  UTF8_SMModel.cs
src/Core/Models/MultiByte/Chinese/: BIG5SMModel.cs  EUCTWSMModel.cs  GB18030_SMModel.cs  HZ_GB_2312_SMModel.cs  Iso_2022_CN_SMModel.cs
src/Core/Models/MultiByte/Japanese/: EUCJPSMModel.cs  Iso_2022_JP_SMModel.cs  SJIS_SMModel.cs
src/Core/Models/MultiByte/Korean/: CP949SMModel.cs  EUCKRSMModel.cs  Iso_2022_KR_SMModel.cs
src/Core/Models/SingleByte/Arabic/: ArabicModel.cs  Iso_8859_6_ArabicModel.cs  Windows_1256_ArabicModel.cs
src/Core/Models/SingleByte/Bulgarian/: BulgarianModel.cs  Iso_8859_5_BulgarianModel.cs  Windows_1251_BulgarianModel.cs
src/Core/Models/SingleByte/Croatian/: CroatianModel.cs  Ibm852_CroatianModel.cs  Iso_8859_13_CroatianModel.cs  Iso_8859_16_CroatianModel.cs  Iso_8859_2_CroatianModel.cs  Mac_Centraleurope_CroatianModel.cs  Windows_1250_CroatianModel.cs
src/Core/Models/SingleByte/Czech/: CzechModel.cs  Ibm852_CzechModel.cs  Iso_8859_2_CzechModel.cs  Mac_Centraleurope_CzechModel.cs  Windows_1250_CzechModel.cs
src/Core/Models/SingleByte/Danish/: DanishModel.cs  Iso_8859_15_DanishModel.cs  Iso_8859_1_DanishModel.cs  Windows_1252_DanishModel.cs
src/Core/Models/SingleByte/Esperanto/: EsperantoModel.cs  Iso_8859_3_EsperantoModel.cs
src/Core/Models/SingleByte/Estonian/: EstonianModel.cs  Iso_8859_13_EstonianModel.cs  Iso_8859_15_EstonianModel.cs  Iso_8859_4_EstonianModel.cs  Windows_1252_EstonianModel.cs  Windows_1257_EstonianModel.cs
src/Core/Models/SingleByte/Finnish/: FinnishModel.cs  Iso_8859_13_FinnishModel.cs  Iso_8859_15_FinnishModel.cs  Iso_8859_1_FinnishModel.cs  Iso_8859_4_FinnishModel.cs  Iso_8859_9_FinnishModel.cs  Windows_1252_FinnishModel.cs
src/Core/Models/SingleByte/French/: FrenchModel.cs  Iso_8859_15_FrenchModel.cs  Iso_8859_1_FrenchModel.cs  Windows_1252_FrenchModel.cs
src/Core/Models/SingleByte/German/: GermanModel.cs  Ibm850_GermanModel.cs  Iso_8859_1_GermanModel.cs  Windows_1252_GermanModel.cs
src/Core/Models/SingleByte/Greek/: GreekModel.cs  Iso_8859_7_GreekModel.cs  Windows_1253_GreekModel.cs
src/Core/Models/SingleByte/Hebrew/: HebrewModel.cs  Windows_1255_HebrewModel.cs
src/Core/Models/SingleByte/Hungarian/: HungarianModel.cs  Iso_8859_2_HungarianModel.cs  Windows_1250_HungarianModel.cs
src/Core/Models/SingleByte/Irish/: IrishModel.cs  Iso_8859_15_IrishModel.cs  Iso_8859_1_IrishModel.cs  Iso_8859_9_IrishModel.cs  Windows_1252_IrishModel.cs
src/Core/Models/SingleByte/Italian/: Iso_8859_15_ItalianModel.cs  Iso_8859_1_ItalianModel.cs  Iso_8859_3_ItalianModel.cs  Iso_8859_9_ItalianModel.cs  ItalianModel.cs  Windows_1252_ItalianModel.cs
src/Core/Models/SingleByte/Latvian/: Iso_8859_10_LatvianModel.cs  Iso_8859_13_LatvianModel.cs  Iso_8859_4_LatvianModel.cs  LatvianModel.cs
src/Core/Models/SingleByte/Lithuanian/: Iso_8859_10_LithuanianModel.cs  (+3 more)
src/Core/Probers/: CharsetProber.cs  CodingStateMachine.cs  EscCharsetProber.cs  HebrewProber.cs  Latin1Prober.cs  MBCSGroupProber.cs  ProbingState.cs  SBCSGroupProber.cs  SingleByteCharSetProber.cs
src/Core/Probers/MultiByte/: UTF8Prober.cs
src/Example/: Ude.Example.csproj  Ude.Example.mdp  Udetect.cs
src/Example/Properties/: AssemblyInfo.cs
src/Example/Ude.Example/: Udetect.cs
src/Tests/: CharsetDetectorTest.cs  CharsetDetectorTestBatch.cs  CharsetProberTest.cs  Ude.Tests.csproj
src/Tests/Properties/: AssemblyInfo.cs
src/Tests/Ude.Tests/: BitPackageTest.cs  CharsetDetectorTest.cs  CharsetDetectorTestBatch.cs  CharsetProberTest.cs
src/V2/: DetectionSummary.cs
tests/: BitPackageTest.cs  CharsetDetectorTest.cs  CharsetDetectorTestBatch.cs  Charsets.cs  CodepageNameTest.cs  DetectionDetailTests.cs  EncodingJsonConverter.cs  Makefile.am  UTF-unknown.Tests.csproj
tests/Data/: README  README.md
tests/Data/cp949/: cp949_1.txt  cp949_2.txt
tests/Data/ibm850/: lang_de_ibm850.txt
tests/Data/ibm855/: 2.txt
tests/Data/iso-8859-1/: 4.txt
tests/Data/iso-8859-7/: greek_noEOLs.txt
tests/Data/koi8-r/: 2.txt
tests/Data/utf-8/: csv_test_correct_GZ.txt  emoji.html.txt
tests/Data/windows-1251/: 2.txt
tests/Data/windows-1252 (latin1)/: 2.txt  5.txt
tests/Data/windows-1253/: greek.txt
trunk/ude/: Ude.mds  Ude.sln  configure  configure.ac
trunk/ude/src/Example/: Makefile.am  Ude.Example.csproj
trunk/ude/src/Tests/: Ude.Tests.mdp
(+83 files in other folders)
